fixes footer spacing and reference ticker

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,9 @@ body {
     flex-direction: column;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    align-self: flex-start;
 }
 
 .card::before {
@@ -98,7 +101,6 @@ body {
     padding: 1px; 
     background: linear-gradient(to right, #0EA5E9, #0E74E9);
     -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
     mask-composite: exclude;
     pointer-events: none;
 }
@@ -258,7 +260,7 @@ body {
     margin-top: 2rem;
 }
 
-.chat-container svg {
+.arrow {
     padding-top: 12px;
     width: 40px;
     margin-right: 0.5rem;
@@ -398,12 +400,6 @@ body {
         ); */
     }
 
-    @container right-col (max-width: 1008px) {
-        .skills {
-            max-width: 600px;
-        }
-    }
-
     .footer {
         padding: 5.5rem 5rem 4rem 5rem;
     }
@@ -411,15 +407,23 @@ body {
     .interest {
         font-size: 4rem;
     } 
+
+    .arrow {
+        width: 80px;
+        padding-right: 1rem;
+    }
     
     .chat-container {
         font-size: 6rem;
+        margin: 48px 0;
     }
 
     .socials-container {
         display: flex;
         flex-direction: row;
-        gap: 3rem;
+        max-width: 1000px;
+        justify-content: space-around;
+        font-size: 1.125rem;
     }
 
 }
@@ -428,7 +432,7 @@ body {
     container: right-col / inline-size;
 }
 
-@container right-col (max-width: 895px) {
+@container right-col (max-width: 1008px) {
     .skills {
         max-width: 600px;
     }
